restructure; fix scripts; update readme;

--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "11ty-twe",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "11ty-tw",
+  "version": "0.1.0",
+  "description": "This is a boilerplate. There are many like it but this one is built with 11ty and tailwindcss.",
   "scripts": {
-    "watch": "eleventy --serve && --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "postcss src/assets/style.css -o public/assets/style.css",
-    "dev": "concurrently \"npm run build\" \"npm run watch\""
+    "start": "npm run serve",
+    "serve": "run-p \"build:html -- --serve\" \"build:css -- --watch\"",
+    "build": "npm-run-all build:css build:html",
+    "build:html": "eleventy",
+    "build:css": "postcss src/_includes/css/style.css -o ./.build/css/style.css",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thad Bloom",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
+    "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
-    "concurrently": "^7.2.2",
     "cssnano": "^5.1.14",
+    "npm-run-all": "^4.1.5",
     "npm-watch": "^0.11.0",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
